<resources>
    <string name="app_name">Chick Bids</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="app_display_name">CHICKBIDS</string>
    <string name="prompt_username">Enter Username</string>
    <!--<string name="prompt_password">Password (optional)</string>-->
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="message_hint">Type message</string>

    <string name="username_hint">username</string>
    <string name="first_name_hint">first</string>
    <string name="last_name_hint">last</string>
    <string name="email_hint">name@provider.com</string>
    <string name="phone_hint">780–666–8888</string>
    <string name="chicken_experience_hint">experience</string>

    <string name="name_label">Name:</string>
    <string name="email_label">Email:</string>
    <string name="phone_label">Phone:</string>
    <string name="chicken_experience_label">Experience:</string>

    <string name="title_activity_main_screen">Home</string>
    <string name="title_activity_item_views">Chickens</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_item_fragment1">ItemFragment1</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_item_profile">Chicken Profile</string>
    <string name="title_activity_notices">Notifications</string>
    <string name="title_activity_bids">Bids</string>
    <string name="title_activity_add_chicken">Add Chicken</string>
    <string name="title_activity_add_profile">Add Profile</string>
    <string name="title_activity_user_profile">User Profile</string>
    <string name="account_created_message">"Account created. Please click to log in."</string>
    <string name="account_updated_message">"Account has been updated."</string>

    <!-- Strings related to navigation bar -->
    <string name="navbar_home">Home</string>
    <string name="navbar_notifications">Notifications</string>

    <!-- String related to context menus -->
    <string name="contextmenu_delete">Delete</string>

    <!-- Strings related to buttons -->
    <string name="profile">Profile</string>
    <string name="Search">Search</string>
    <string name="Chickens">Chickens</string>
    <string name="Logout">Logout</string>
    <string name="title_activity_notifications">NotificationsActivity</string>

    <!-- Strings related to Item Profile -->
    <string name="item_profile_possession">Possession</string>
    <string name="item_profile_owned">Owned</string>
    <string name="item_profile_owned_with_bids">Received Bids</string>
    <string name="item_profile_lent">Lent</string>
    <string name="item_profile_borrowed">Borrowed</string>
    <string name="item_profile_bids_placed">My Bidded</string>

    <string name="title_activity_chicken_profile">Chicken Profile</string>
    <string name="button_save">Save</string>
    <string name="button_delete_image">Delete Image</string>
    <string name="title_activity_searches">Chicken Search</string>
    <string name="pending_notifications">You have some pending notifications</string>
    <string name="button_send">Send Message</string>
    <string name="title_activity_edit_chicken">Edit Chicken</string>

    <string name="chicken_name_hint">Chicken\'s name</string>
    <string name="chicken_description_hint">Description of chicken</string>
    <string name="button_edit">Edit</string>
    <string name="button_view_bids">View Bids</string>
    <string name="button_view_image">View Photo</string>
    <string name="button_return">Return</string>
    <string name="button_bid">Bid</string>
    <string name="owner_label">Owned by:</string>
    <string name="button_view_location">View Location</string>

    <string name="title_activity_location">Location</string>
    <string name="location_pin_title">Pick Up Here!</string>
    <string name="to_label">To:</string>
    <string name="message_label">Message:</string>

</resources>
