<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.c301_w16_g5.c301_w16_g5.EditProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/navbar"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_margin="16dp"
            android:text="@string/to_label"
            android:textStyle="bold"
            android:textColor="@color/colorTextSecondary"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/username"
            android:maxLength="26"
            android:singleLine="true"
            android:textStyle="bold"
            android:hint="@string/username_hint"
            android:textColor="@color/colorPrimaryDark"/>

        </LinearLayout>

        <!-- TODO: cite source
             Adding a line to android layout
             http://stackoverflow.com/questions/5049852/android-drawing-separator-divider-line-in-layout
             Answer by Alex Kucherenko on Apr 23 2012
             Accessed by Satyen Akolkar on Mar 7 2016 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/message_label"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/colorTextSecondary"/>
        <EditText
            android:id="@+id/messageEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorTextSecondary"
            android:maxLength="150"
            android:hint="@string/message_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_margin="16dp"
            android:gravity="center|bottom">
            <Button
                android:id="@+id/buttonSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_send"
                android:textSize="16.5dp"
                android:background="@color/colorAccent"
                android:textStyle="bold"
                android:typeface="normal"/>
        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
