<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.c301_w16_g5.c301_w16_g5.EditProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/navbar"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/username"
            android:padding="16dp"
            android:textStyle="bold"
            android:hint="@string/username_hint"
            android:textColor="@color/colorPrimaryDark"
            android:minEms="1"/>
        <!--source:
         http://stackoverflow.com/questions/3188719/how-can-i-set-a-minimum-width-in-characters-for-a-textview
        answered by Adrian on Jun 4 '11
        accessed by Hailey on Mar 13 '16-->

        <!-- Adding a line to android layout
             http://stackoverflow.com/questions/5049852/android-drawing-separator-divider-line-in-layout
             Answer by Alex Kucherenko on Apr 23 2012
             Accessed by Satyen Akolkar on Mar 7 2016 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"/>

        <!--Android add TableLayout and LinearLayout together?-->
        <!--http://stackoverflow.com/questions/32837466/android-add-tablelayout-and-linearlayout-together-->
        <!--Answered Sep 29 '15 at 6:54 by Phan Văn Linh-->
        <!--Accessed by Hailey Musselman on Mar 12 2016-->

        <!--Android EditText with multiple Lines automatic line break
        source:
        http://stackoverflow.com/questions/10313417/android-edittext-with-multiple-lines-automatic-line-break
        answered by Aerrow on Apr 25 '12
        accessed by Hailey on Mar 13 '16-->

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5">
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="12dp"
                android:maxLength="15"
                android:id="@+id/firstName"
                android:singleLine='true'
                android:textColor="@color/colorTextSecondary"
                android:hint="@string/first_name_hint"
                android:layout_weight="2"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginRight="16dp"
                android:maxLength="20"
                android:id="@+id/lastName"
                android:singleLine='true'
                android:textColor="@color/colorTextSecondary"
                android:hint="@string/last_name_hint"
                android:layout_weight="3"/>
        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/email"
            android:singleLine='true'
            android:maxLength="50"
            android:textColor="@color/colorTextSecondary"
            android:hint="@string/email_hint"
            android:minEms="1"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/phone"
            android:maxLength="12"
            android:textColor="@color/colorTextSecondary"
            android:hint="@string/phone_hint"
            android:minEms="1"/>
        <EditText
            android:id="@+id/experience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ems="8"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorTextSecondary"
            android:minEms="1"
            android:maxLength="150"
            android:hint="@string/chicken_experience_hint" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_margin="16dp"
            android:gravity="center|bottom">
            <Button
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonSave"
                android:textSize="16.5dp"
                android:onClick="updateUser"
                android:background="@color/colorAccent"
                android:typeface="normal"/>
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
