<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.c301_w16_g5.c301_w16_g5.OthersChickenDisplayProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0">
            <include layout="@layout/navbar"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:id="@+id/bidEditText"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:hint="$/day"
                    android:numeric="decimal"
                    android:singleLine="true"
                    android:maxLength="16"/>

                <Button
                    android:id="@+id/buttonBid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_bid"
                    android:textSize="16.5dp"
                    android:background="@color/colorAccent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:typeface="normal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:id="@+id/name"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/status"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_weight="1"
                    android:gravity="right"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/description"
                android:textColor="@color/colorTextSecondary"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center|bottom">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="left"
                android:layout_margin="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/ownerUsernameLabel"
                    android:text="@string/owner_label"
                    android:textColor="@color/colorTextSecondary"
                    android:layout_marginRight="8dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/ownerUsername"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"/>
            </LinearLayout>
            <Button
                android:id="@+id/buttonViewBids"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_view_bids"
                android:textSize="16.5dp"
                android:background="@color/colorAccent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textStyle="bold"
                android:typeface="normal"/>
            <Button
                android:id="@+id/buttonReturn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_return"
                android:textSize="16.5dp"
                android:background="@color/colorAccent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textStyle="bold"
                android:typeface="normal"
                android:visibility="gone"/>
            <Button
                android:id="@+id/buttonViewPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_view_image"
                android:textSize="16.5dp"
                android:background="@color/colorAccent"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textStyle="bold"
                android:typeface="normal"/>
            <Button
                android:id="@+id/buttonViewLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_view_location"
                android:textSize="16.5dp"
                android:background="@color/colorAccent"
                android:layout_margin="16dp"
                android:textStyle="bold"
                android:typeface="normal"/>
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
