<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".DisplayProfileActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/navbar"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/usernameTextView"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:padding="16dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark" />

        <!-- TODO: cite source
             Adding a line to android layout
             http://stackoverflow.com/questions/5049852/android-drawing-separator-divider-line-in-layout
             Answer by Alex Kucherenko on Apr 23 2012
             Accessed by Satyen Akolkar on Mar 7 2016 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/nameLabel"
                android:text="@string/name_label"
                android:textColor="@color/colorTextSecondary"
                android:textStyle="bold"
                android:layout_marginRight="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/nameTextView"
                android:textColor="@color/colorTextSecondary"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/emailLabel"
                android:text="@string/email_label"
                android:textColor="@color/colorTextSecondary"
                android:textStyle="bold"
                android:layout_marginRight="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/emailTextView"
                android:textColor="@color/colorTextSecondary"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/phoneLabel"
                android:text="@string/phone_label"
                android:textColor="@color/colorTextSecondary"
                android:textStyle="bold"
                android:layout_marginRight="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/phoneNumberTextView"
                android:textColor="@color/colorTextSecondary"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/chickenExperienceLabel"
                android:text="@string/chicken_experience_label"
            android:textColor="@color/colorTextSecondary"
            android:textStyle="bold"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/chickenExperienceTextView"
            android:textColor="@color/colorTextSecondary"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center|bottom">

        <Button
            android:id="@+id/buttonSendMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_send"
            android:textSize="16.5dp"
            android:background="@color/colorAccent"
            android:layout_margin="16dp"
            android:textStyle="bold"
            android:typeface="normal"
            android:visibility="invisible"
            android:clickable="false"/>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_mode_edit_white_48dp"/>

</android.support.design.widget.CoordinatorLayout>
